--- a/frontend/src/Pages/AddtoCart/AddtoCart.css
+++ b/frontend/src/Pages/AddtoCart/AddtoCart.css
@@ -1,3 +1,11 @@
+.addtocart{
+    display: flex;
+    gap: 63px;
+    display: inline-flex;
+    flex-direction: column;
+    /* align-items: flex-start; */
+}
+
 .addcart{
     display: inline-flex;
 flex-direction: column;
@@ -140,4 +148,27 @@ font-weight: 500;
 line-height: 20px; /* 142.857% */
 letter-spacing: 0.1px;
 text-transform: uppercase;
+}
+
+.like{
+    display: inline-flex;
+flex-direction: column;
+align-items: center;
+gap: 40px;
+}
+.like-head{
+    color: var(--Primary-Primary, #282828);
+text-align: center;
+
+/* Headline/Large */
+font-family: "Prosto One";
+font-size: 32px;
+font-style: normal;
+font-weight: 400;
+line-height: 40px; /* 125% */
+}
+.like-content{
+    display: flex;
+align-items: flex-start;
+gap: 24px;
 }
