--- a/frontend/src/Pages/Landing/Landing.css
+++ b/frontend/src/Pages/Landing/Landing.css
@@ -17,10 +17,49 @@ gap: 30px;
 .landing-right-head{
     color: var(--Primary-Primary, #282828);
 
-/* Display/Small */
+
 font-family: "Prosto One";
 font-size: 36px;
 font-style: normal;
 font-weight: 400;
-line-height: 44px; /* 122.222% */
+line-height: 44px;
+
+
+width: 456px;
+}
+.landing-right-para{
+    display: flex;
+width: 456px;
+/* height: 152px; */
+flex-direction: column;
+justify-content: center;
+color: var(--Primary-Primary, #282828);
+
+/* Body/Large */
+font-family: Montserrat;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 150% */
+letter-spacing: 0.5px;
+}
+
+.landing-right-img{
+    display: flex;
+width: 263px;
+height: 56px;
+padding: 10px 24px;
+justify-content: center;
+align-items: center;
+gap: 8px;
+background: var(--Primary-Primary, #282828);
+color: var(--Primary-On-Primary, #FFF);
+text-align: center;
+font-family: Montserrat;
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: 20px; /* 142.857% */
+letter-spacing: 0.1px;
+text-transform: uppercase;
 }
